--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,10 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>depth</name>
     <description>depth</description>
+
     <properties>
         <java.version>11</java.version>
+        <oracle.jdbc.version>21.1.0.0</oracle.jdbc.version>
     </properties>
 
     <dependencyManagement>
@@ -62,6 +64,24 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>${oracle.jdbc.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ucp</artifactId>
+            <version>${oracle.jdbc.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
