--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,21 @@
 
 server.servlet.context-path=/api
+
+# OracleDB connection settings
+spring.datasource.url=jdbc:oracle:thin:@//localhost:11521/ORCLPDB1
+spring.datasource.username=books
+spring.datasource.password=books
+spring.datasource.type=oracle.ucp.jdbc.PoolDataSource
+
+# HikariCP settings
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=20
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.poolName=HikariPoolBooks
+
+# JPA settings
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.hibernate.ddl-auto=create
